--- a/package.json
+++ b/package.json
@@ -14,18 +14,10 @@
   "dependencies": {
     "await-to-js": "^2.0.1",
     "express": "^4.16.3",
-    "express-graphql": "^0.6.12",
-    "express-promise-router": "^3.0.3",
-    "graphiql": "^0.11.11",
-    "graphql": "^0.13.2",
-    "graphql-s2s": "^0.16.5",
-    "graphql-serverless": "^0.8.1",
-    "graphql-tools": "^3.0.5",
     "jstransformer-markdown-it": "^2.1.0",
     "markdown": "^0.5.0",
-    "pg": "^7.4.3",
     "pug": "^2.0.3",
-    "schemaglue": "^4.0.1",
+    "sqlite3": "^4.0.2",
     "webfunc": "^0.14.0"
   },
   "repository": "https://github.com/Lokraan/personal-website"
