--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leaflet-geosearch": "^2.7.0",
     "markdown": "^0.5.0",
     "pug": "^2.0.3",
+    "socketio": "^1.0.0",
     "sqlite3": "^4.0.2",
     "webfunc": "^0.14.0"
   },
