--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pug": "^2.0.3",
     "socket.io": "^2.1.1",
     "sqlite3": "^4.0.2",
+    "uuid": "^3.3.2",
     "webfunc": "^0.14.0"
   },
   "repository": "https://github.com/Lokraan/personal-website"
