--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha",
+    "dev": "npm-run-all -p sass:*",
+    "setup": "node src/migrations/reset.js",
+    "build-task:scss-compile": "node-sass --source-map true src/scss/ -o public/css",
+    "build-task:autoprefixer": "postcss public/css/*.css --use autoprefixer -d public/css",
+    "sass:build": "npm-run-all -p build-task:*",
+    "sass:watch": "chokidar 'src/scss/**/*.scss' -c 'npm run sass:build'",
     "migrate": "node src/migrations/migrate.js",
     "reset": "node src/migrations/reset.js",
     "seed": "node src/migrations/seed.js"
@@ -12,15 +18,20 @@
   "author": "g",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^9.3.1",
     "await-to-js": "^2.0.1",
     "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
+    "chokidar-cli": "^1.2.1",
     "config": "^2.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "leaflet-geosearch": "^2.7.0",
     "markdown": "^0.5.0",
     "node-gyp": "^3.8.0",
+    "node-sass": "^4.9.4",
+    "npm-run-all": "^4.1.3",
+    "postcss-cli": "^6.0.1",
     "pug": "^2.0.3",
     "sequelize": "^4.39.1",
     "socket.io": "^2.1.1",
