--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express-session": "^1.15.6",
     "leaflet-geosearch": "^2.7.0",
     "markdown": "^0.5.0",
+    "mime": "^2.3.1",
+    "multer": "^1.4.1",
     "node-gyp": "^3.8.0",
     "node-sass": "^4.9.4",
     "npm-run-all": "^4.1.3",
